fixed #49
register && auth api
